# navisual

./: .env.example  .gitignore  AI-Navigator-Design-Document.md  ARCHITECTURE.md  CLAUDE.md  LICENSE.md  README.md  SECURITY.md  index.html  overlay.html  package.json  pnpm-lock.yaml  pointer-preview.html  pyproject.toml  tsconfig.json  vite.config.js
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
legacy/src/ai/: api_router.py  openai_client.py  prompts.py
legacy/src/core/: __init__.py  correction.py  session.py  step_sequencer.py
legacy/src/input/: __init__.py  chat_input.py  screen_capture.py  voice_input.py
legacy/src/locator/: a11y_engine.py  ocr_engine.py  template_engine.py
legacy/src/output/: overlay.py  tts.py
legacy/src/ui/: floating_window.py  main_window.py  settings_window.py
legacy/tests/: test_element_locator.py  test_screen_capture.py  test_screen_monitor.py  test_session.py  test_state_summary.py  test_step_sequencer.py
server/: package.json  wrangler.toml
server/src/: index.ts
sidecar/: README.md  config.py  dispatch.py  main.py  pyproject.toml
sidecar/ai/: anthropic_client.py  api_router.py  gemini_client.py  ollama_client.py
sidecar/core/: correction.py  session.py  state.py  step_sequencer.py
src/: AccountPanel.svelte  App.svelte  BillingPanel.svelte  HotkeyInput.svelte  Overlay.svelte  TrialExhaustedModal.svelte  __init__.py  app.html  config.py  main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.ai_navigator/: usage.json
src-tauri/.ai_navigator/sessions/: 02895c3c-cebd-442e-a299-d62d198286f4.json  097e8f48-b808-4bd3-bdf5-c5d0df6efc2c.json  0e2f74d4-cc97-457f-a92f-4420e948a13e.json  0f816f71-3e6b-4759-83db-e79703c4af44.json  2351c061-8a82-49e7-944a-0215c03cc541.json  242e5140-6faf-437b-8f91-1ba2fac0c659.json  2d024269-2920-467e-a68f-1a6591acfe1c.json  3514c90c-dacc-4cf1-9374-cd17f8d27bf4.json  4983e4b4-9a99-4771-8ebc-5d64162f9301.json  5d30b8b5-76f1-42b0-a085-3d68b604d745.json  70650c04-3d4b-4726-973d-df5a7a362945.json  75c9d150-ac38-4c8d-8973-d61e5a1543f1.json  7be6181e-1f1f-4475-a342-8ec5fb534388.json  7e3353da-d930-4450-9d02-d6e0f6fe8f06.json  8262f970-48d1-459c-ae23-1fe5847e916b.json  838686ea-b5ae-4d1e-9e96-fdd6a4b06226.json  84183a79-c01e-4894-9289-ad0806cb4ebc.json  8484fea8-3abe-433e-a494-8cd6ec49d264.json  8d5aa9e2-0c66-4218-b784-3b63844ef8eb.json  908258c3-de8a-4b4d-9dbf-e474f24b5005.json  a12583b8-83be-407f-8371-75d5ff4a14c5.json  a5f22db5-f5f1-410a-b6cf-181c1c57a9d9.json  a63a7498-1e1b-4ed8-a2ac-61d158e25837.json  ad58fcde-9fc1-4afd-a291-2b47f2f5305a.json  bcfd78c2-e50a-4274-9875-597af03db19e.json  c08df6ea-5681-42ce-b72a-4b2a552610b1.json  c0a85346-b54e-4290-b94d-e572e4772299.json  c3afd054-8733-4343-b764-c0d1183a364a.json  c5125cb2-20e5-4785-b4f0-79c63fa8f28d.json  ccc80621-8361-40e2-b489-e48f7962224b.json  cdca71fa-6d88-4f18-86a7-0c5bc73c381d.json  ceee599e-0a51-400d-9070-fc12200eecd9.json  de942d3e-396a-4904-89b0-b0b8af17955b.json  e1b99b64-c7e8-4d5a-ba52-2a40bd216188.json  e2a9be8e-31a6-41f1-b2dd-c2c3b809ec8b.json  e8c37210-1d1a-41b2-8540-ac093cb8e1cf.json  e99af12a-6ef5-4818-a86d-d57cea15f929.json  f2a66a9e-0cb7-468b-b4a4-f03983149a3f.json  f52421d1-ffc7-4d0c-b758-655f78fe13ab.json  f76b333f-7bf6-40c7-8cde-42f6e30bdf5d.json  (+1 more)
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/packs/blender/: NOTICE.md  navisual_bridge.py  pack.json
src-tauri/packs/generic-browser/: pack.json
src-tauri/packs/turbotax/: pack.json
src-tauri/src/: credvault.rs  grid.rs  jsonl_log.rs  lib.rs  main.rs  overlay.rs  prompt_log.rs  screen_watcher.rs  server.rs  track.rs  tts.rs
src-tauri/src/ai/: anthropic.rs  bbox.rs  config.rs  cost_tracker.rs  deepseek.rs  gemini.rs  managed.rs  mod.rs  ollama.rs  pricing.rs  prompts.rs  router.rs  session.rs  spaces.rs  streaming.rs  types.rs
src-tauri/src/capture/: mod.rs  win.rs
src-tauri/src/locator/: a11y.rs  candidates.rs  hit_test.rs  keepwarm.rs  mod.rs  ocr.rs  orchestrator.rs  template.rs  trace.rs
src-tauri/src/locator/adapters/: blender.rs  excel.rs  mod.rs  office_com.rs  powerpoint.rs  word.rs
src-tauri/src/packs/: addon_install.rs  mod.rs
src-tauri/src/sidecar/: mod.rs  protocol.rs
src/ai/: __init__.py  anthropic_client.py  api_router.py  gemini_client.py  ollama_client.py  prompts.py  tool_schemas.py
src/core/: cost_tracker.py  session.py  step_sequencer.py
src/input/: screen_capture.py  screen_monitor.py  voice_input.py
src/lib/: account.svelte.ts  billing.svelte.ts  hotkey.ts
src/locator/: __init__.py  a11y_engine.py  element_locator.py  ocr_engine.py
src/output/: __init__.py  clipboard.py  overlay.py  tts.py
src/routes/: +page.svelte
src/routes/overlay/: +page.svelte
src/ui/: __init__.py  floating_window.py  main_window.py  panel_window.py  settings_window.py
tests/: test_api_router.py  test_cost_tracker.py
tools/: README.md  _spike_metrics.py  _spike_ocr.py  analyze-grounding-accuracy.ps1  analyze-locate-log.ps1  bbox_spike.py  capture_fixture.py  grid_draw.py  ocr_preprocess.py  requirements.txt
