[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-navigator"
version = "0.1.0-alpha"
description = "AI guidance system for desktop tasks. Observes screen, provides navigation instructions via audio and overlays."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "FSL-1.1-Apache-2.0"}
authors = [
    {name = "stevefu-ops", email = "stevefu-ops@github.com"}
]
keywords = ["ai", "navigation", "guidance", "screen-reader", "accessibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment",
]

dependencies = [
    "pyside6>=6.6.0",           # UI framework
    "mss>=9.0.0",               # Screen capture
    "imagehash>=4.3.0",         # pHash for screenshot dedup
    "uiautomation>=2.0.18",    # PRIMARY: Windows UI Automation (< 5ms element lookup)
    # Windows OCR (primary OCR backend — built into Windows 10/11, zero ML models)
    "winrt-runtime>=2.0.0",
    "winrt-Windows.Media.Ocr>=2.0.0",
    "winrt-Windows.Graphics.Imaging>=2.0.0",
    "winrt-Windows.Storage.Streams>=2.0.0",
    "winrt-Windows.Foundation>=2.0.0",
    "winrt-Windows.Foundation.Collections>=2.0.0",
    "winrt-Windows.Globalization>=2.0.0",
    "httpx>=0.25.0",            # Async HTTP client
    "pydantic>=2.0.0",          # Data validation
    "python-dotenv>=1.0.0",     # Environment config
    "pyperclip>=1.8.2",         # Clipboard access
    "keyboard>=0.13.5",         # Global hotkeys (Windows/Linux/macOS)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]

# Provider extras — install only what you use
gemini = [
    # No extra dependencies: uses httpx (already in core) + Google AI Studio REST API
    # Get a free API key at https://aistudio.google.com/apikey
]

paddle = [
    # PaddleOCR fallback — only needed on non-Windows (macOS/Linux, v1.x).
    # Windows 11 uses the built-in Windows.Media.Ocr; these are never imported there.
    # WARNING: PaddlePaddle 3.x has a PIR+OneDNN bug on Windows — don't install on Windows.
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
]

ollama = [
    # No extra dependencies: uses httpx (already in core) + local Ollama server
    # Install Ollama: https://ollama.com
    # Pull a vision model: ollama pull llama3.2-vision
]

openai = [
    "openai>=1.0.0",             # OpenAI SDK (v0.2+)
]

tts = [
    "pyttsx3>=2.90",             # Local TTS via Windows SAPI / macOS NSSpeechSynthesizer
]

stt = [
    "SpeechRecognition>=3.10.0",  # Push-to-talk STT via Google Web Speech API
    "pyaudio>=0.2.14",            # Microphone access (Windows: install PortAudio first)
    "openai-whisper>=20230314",   # Local speech-to-text (v0.2+, alternative backend)
]

[project.urls]
Repository = "https://github.com/stevefu-ops/ai-navigator"
Issues = "https://github.com/stevefu-ops/ai-navigator/issues"
Documentation = "https://github.com/stevefu-ops/ai-navigator/blob/main/docs/design.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
