[project]
name = "ainav-sidecar"
version = "0.4.0-alpha"
description = "AI Navigator — Python sidecar (AI routing, session, voice)"
requires-python = ">=3.11"
dependencies = [
  # Phase A: no AI deps yet. Phase B adds:
  # "anthropic>=0.40",
  # "google-generativeai>=0.8",
  # "ollama>=0.3",
  # "pydantic>=2.0",
  # "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.0",
  "pytest>=8.0",
]
