[project]
name = "ainav-sidecar"
version = "0.4.0-alpha"
description = "AI Navigator — Python sidecar (AI routing, session, voice)"
requires-python = ">=3.11"
dependencies = [
  # Core
  "httpx>=0.25.0",             # Async HTTP client (Anthropic / Gemini / Ollama)
  "pydantic>=2.0.0",           # Data validation (tool schemas, sessions, config)
  "pydantic-settings>=2.0.0",  # Env-var config loader
  "python-dotenv>=1.0.0",      # .env file support
]

[project.optional-dependencies]
# Voice input / TTS — not loaded in Phase B, kept for parity during Phase E.
voice = [
  "SpeechRecognition>=3.10.0",
  "pyaudio>=0.2.14",
]
tts = [
  "pyttsx3>=2.90",
]
# OpenAI provider (stub — promoted in a later phase)
openai = [
  "openai>=1.0.0",
]
dev = [
  "pyinstaller>=6.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
