[package]
name = "ainav-backend"
version = "0.4.0-alpha"
description = "AI Navigator — Rust/Tauri backend"
authors = ["AI Navigator"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ainav_backend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
log = "0.4"

# Phase C — screen capture + Windows APIs
xcap = "0.8"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22"
regex = "1"

[target.'cfg(windows)'.dependencies]
# Match uiautomation 0.24.x's windows version to avoid duplicate native bindings.
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  # Phase C.3 — Windows.Media.Ocr
  "Foundation_Collections",
  "Media_Ocr",
  "Graphics_Imaging",
  "Storage_Streams",
  # Phase D.3 — TTS via Windows SAPI
  "Win32_Media_Speech",
] }
uiautomation = { version = "0.24.4", features = ["process"] }

