[package]
name = "navisual-backend"
version = "0.5.26"
description = "Navisual — Rust/Tauri backend"
authors = ["Navisual"]
license = "FSL-1.1-Apache-2.0"
edition = "2021"
repository = "https://github.com/NavisualGuide/navisual"
homepage = "https://navisualguide.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "navisual_backend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
log = "0.4"
parking_lot = "0.12"

# Phase C — screen capture + Windows APIs.
# xcap was tried briefly (commit 339eb71) but reverted: silently fails on
# left-secondary monitors at negative virtual-desktop x. Per-monitor CreateDCW
# in src/capture/win.rs is the correct path. See SDD §2.5 and §A v2.2.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22"
sha2 = "0.10"
regex = "1"
eventsource-stream = "0.2.3"
futures-util = "0.3.32"
arboard = "3"
font8x8 = "0.3"

[target.'cfg(windows)'.dependencies]
# Match uiautomation 0.24.x's windows version to avoid duplicate native bindings.
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  # SetWinEventHook (event-driven window tracking) lives here
  "Win32_UI_Accessibility",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  # Phase C.3 — Windows.Media.Ocr
  "Foundation_Collections",
  "Media_Ocr",
  "Graphics_Imaging",
  "Storage_Streams",
  # WinRT TTS — OneCore (modern) voices via SpeechSynthesizer + MediaPlayer + MediaSource
  "Foundation",
  "Media_SpeechSynthesis",
  "Media_Playback",
  "Media_Core",
  # Phase D.3 — legacy SAPI ISpVoice (superseded by the WinRT engine above)
  "Win32_Media_Speech",
  # PrintWindow — capture window directly, works on any monitor (incl. left secondary)
  "Win32_Storage_Xps",
  "Win32_System_Threading",
] }
uiautomation = { version = "0.24.4", features = ["process", "event"] }

# Faster dev iteration: line-level debug info only (saves link time + PDB size).
# Full symbols (debug = true) are rarely needed during rapid iteration.
[profile.dev]
debug = 1

# Optimize heavy deps in dev builds — they never need to be debugged,
# and their code runs at every keypress (OCR, A11y, window tracking).
[profile.dev.package."windows"]
opt-level = 2
[profile.dev.package."uiautomation"]
opt-level = 2
[profile.dev.package."image"]
opt-level = 2

